--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Style Checking
       run: |
-        flake8 . --max-line-length=79  # Customize max line length as needed
+        flake8 . --ignore=F401 ./port_inspector/port_inspector/settings.py --max-line-length=79  # Customize max line length as needed
         
     - name: Run Tests
       run: |
