--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -29,7 +29,11 @@ jobs:
 
     - name: Style Checking
       run: |
-        flake8 . --ignore=F401 --per-file-ignores="./port_inspector/port_inspector/settings.py:E501" --max-line-length=150
+        flake8 . \
+        --ignore=F401 \
+        --per-file-ignores="./port_inspector/port_inspector/settings.py:E501" \
+        --max-line-length=150 \
+        --exclude=migrations/,*test*.py
         
     - name: Run Tests
       run: |
