--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -2,9 +2,9 @@ name: Django CI
 
 on:
   push:
-    branches: [ "main" ]
     paths-ignore:
-      - 'port_inspector/port_inspector_app/migrations'
+      - 'port_inspector/port_inspector_app/migrations/*'
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
