--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -2,8 +2,6 @@ name: Django CI
 
 on:
   push:
-    paths-ignore:
-      - 'port_inspector/port_inspector_app/migrations/*'
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
@@ -32,7 +30,7 @@ jobs:
 
     - name: Style Checking
       run: |
-        flake8 .  --ignore=F401 --per-file-ignores="./port_inspector/port_inspector/settings.py:E501" --max-line-length=150
+        flake8 .  --ignore=F401 --per-file-ignores="./port_inspector/port_inspector/settings.py:E501" --max-line-length=150 --exclude=**/migrations/**
         
     - name: Run Tests
       run: |
