--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -30,7 +30,7 @@ jobs:
 
     - name: Style Checking
       run: |
-        flake8 .  --ignore=F401 --per-file-ignores="./port_inspector/port_inspector/settings.py:E501" --max-line-length=150 --exclude=**/migrations/**
+        flake8 .  --ignore=F401 --per-file-ignores="./port_inspector/port_inspector/settings.py:E501" --max-line-length=200
         
     - name: Run Tests
       run: |
