update README and fix command to run tests

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -34,4 +34,5 @@ jobs:
         
     - name: Run Tests
       run: |
-        python ./port_inspector/manage.py test
+        cd port_inspector
+        python3 manage.py test
