finished configuring docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,10 @@ services:
   web_migrate:
     extends:
       service: web
-    command: python manage.py migrate
+    command: python port_inspector/manage.py migrate
   web_run:
     extends:
       service: web
-    command: python manage.py runserver 0.0.0.0:8000
+    command: python port_inspector/manage.py runserver 0.0.0.0:8000
     ports:
       - "8000:8000"
