Added additional ignores based on django recommendations

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
-*.sqlite3
+*$py.class
+
+# Virtual environment
+venv/
+.venv/
+env/
+
+# Django specific
+*.log
+*.pot
+local_settings.py
+db.sqlite3
+media/
+
+# Static files
+static/
+
+# OS or Editor related files
+.DS_Store
+*.swp
+*.swo
+*.vscode/
