--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,7 @@ services:
       - .:/code
 
   web_migrate:
-    extends:
-      service: web
+    build: .
     command: python port_inspector/manage.py migrate
 
   web_run:
@@ -16,17 +15,17 @@ services:
       service: web
     command: python port_inspector/manage.py runserver 0.0.0.0:8000
     # Remove the ports from here (DO NOT expose port 8000 directly)
-    # ports:
-    #   - "8000:8000"
-
-  proxy:
-    image: nginx:latest
     ports:
-      - "443:8080"    # secure public access port
-      - "80:8000"    # direct access for your Django web server through the proxy
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-      - /etc/letsencrypt:/etc/letsencrypt
-    restart: always
-    depends_on:
-      - web_run  # Make sure web_run is ready before starting nginx
+      - "8000:8000"
+
+  # proxy:
+  #   image: nginx:latest
+  #   ports:
+  #     - "443:8080"    # secure public access port
+  #     - "80:8000"    # direct access for your Django web server through the proxy
+  #   volumes:
+  #     - ./nginx.conf:/etc/nginx/nginx.conf
+  #     - /etc/letsencrypt:/etc/letsencrypt
+  #   restart: always
+  #   depends_on:
+  #     - web_run  # Make sure web_run is ready before starting nginx
