--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install Pillow
-        pip install -r requirements.txt
+        pip3 install -r requirements.txt
         python -m pip install flake8
 
     - name: Style Checking
